--- a/src/scss/_media-queries.scss
+++ b/src/scss/_media-queries.scss
@@ -322,6 +322,7 @@
     border-bottom: none;
     padding-left: 1rem;
     text-align: center;
+    padding-left: 0rem;
   }
 
   .totals:first-child {
